<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/colorBlue"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="@color/colorWhite"
                android:text="@string/help_popup_title_default"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_help"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="228dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/help_popup_question_one"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/help_popup_answer_one"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/help_popup_question_two"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/help_popup_answer_two"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/help_popup_question_three"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/txtErrorPopupNegative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/help_popup_answer_three"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp" />

                </LinearLayout>

            </ScrollView>

            <Button
                android:id="@+id/btnCerrarPopupHelp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="CERRAR"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_blue_round"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>